--- a/rxtesting-espresso/build.gradle
+++ b/rxtesting-espresso/build.gradle
@@ -1,11 +1,10 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "com.antyzero.rxtesting"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
@@ -20,6 +19,9 @@ android {
 }
 
 dependencies {
+
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
+
+    compile project(':rxtesting-parent')
 }
