--- a/sample-espresso/build.gradle
+++ b/sample-espresso/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "com.antyzero.rxtesting"
+        applicationId "com.antyzero.rxtesting.espresso.sample"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
@@ -20,6 +20,12 @@ android {
 }
 
 dependencies {
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
+
+    compile 'io.reactivex:rxjava:1.1.2'
+    compile 'io.reactivex:rxandroid:1.1.0'
+
+
+    testCompile 'junit:junit:4.12'
+    testCompile project(':rxtesting-espresso')
 }
